plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'stream.api.adapter.adp0178'
version = '0.0.1-SNAPSHOT'
description = 'log-view'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation "org.mapstruct:mapstruct:1.5.5.Final"
    annotationProcessor "org.mapstruct:mapstruct-processor:1.5.5.Final"

    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0"
    // PDF generation
    implementation 'com.github.librepdf:openpdf:1.3.40'
}

tasks.named('test') {
    useJUnitPlatform()
}
